--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,6 +10,7 @@
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
 @import "~bootstrap/scss/type";
+@import "~bootstrap/scss/alert";
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/containers";
 @import "~bootstrap/scss/grid";
@@ -26,6 +27,7 @@
 @import "~bootstrap/scss/list-group";
 @import "~bootstrap/scss/close";
 @import "~bootstrap/scss/helpers";
+@import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/utilities/api";
 
 // Theme mixins
