tests page refactoring

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -34,6 +34,7 @@
 @import "2-mixins/button";
 
 // Theme components
+@import "3-components/alert";
 @import "3-components/avatar";
 @import "3-components/buttons";
 @import "3-components/card";
